--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .n1 {
-    background-image: url("./public/images/bg-images/01n.jpg");
+    background-image: url("/images/bg-images/01n.jpg");
 }
 
 .n2 {
