--- a/src/App.css
+++ b/src/App.css
@@ -3,69 +3,69 @@
 }
 
 .n2 {
-    background-image: url("./public/images/bg-images/02n.jpg");
+    background-image: url("/images/bg-images/02n.jpg");
 }
 
 .n3 {
-    background-image: url("./public/images/bg-images/03n.jpg");
+    background-image: url("/images/bg-images/03n.jpg");
 }
 
 .n4 {
-    background-image: url("./public/images/bg-images/04n.jpg");
+    background-image: url("/images/bg-images/04n.jpg");
 }
 
 .n9 {
-    background-image: url("./public/images/bg-images/09n.jpg");
+    background-image: url("/images/bg-images/09n.jpg");
 }
 
 .n10 {
-    background-image: url("./public/images/bg-images/10n.jpg");
+    background-image: url("/images/bg-images/10n.jpg");
 }
 
 .n11 {
-    background-image: url("./public/images/bg-images/11n.jpg");
+    background-image: url("/images/bg-images/11n.jpg");
 }
 
 .n13 {
-    background-image: url("./public/images/bg-images/13n.jpg");
+    background-image: url("/images/bg-images/13n.jpg");
 }
 
 .n50 {
-    background-image: url("./public/images/bg-images/50n.jpg");
+    background-image: url("/images/bg-images/50n.jpg");
 }
 
 .d1 {
-    background-image: url("./public/images/bg-images/01d.jpg");
+    background-image: url("/images/bg-images/01d.jpg");
 }
 
 .d2 {
-    background-image: url("./public/images/bg-images/02d.jpg");
+    background-image: url("/images/bg-images/02d.jpg");
 }
 
 .d3 {
-    background-image: url("./public/images/bg-images/03d.jpg");
+    background-image: url("/images/bg-images/03d.jpg");
 }
 
 .d4 {
-    background-image: url("./public/images/bg-images/04d.jpg");
+    background-image: url("/images/bg-images/04d.jpg");
 }
 
 .d9 {
-    background-image: url("./public/images/bg-images/09d.jpg");
+    background-image: url("/images/bg-images/09d.jpg");
 }
 
 .d10 {
-    background-image: url("./public/images/bg-images/10d.jpg");
+    background-image: url("/images/bg-images/10d.jpg");
 }
 
 .d11 {
-    background-image: url("./public/images/bg-images/11d.jpg");
+    background-image: url("/images/bg-images/11d.jpg");
 }
 
 .d13 {
-    background-image: url("./public/images/bg-images/13d.jpg");
+    background-image: url("/images/bg-images/13d.jpg");
 }
 
 .d50 {
-    background-image: url("./public/images/bg-images/50d.jpg");
+    background-image: url("/images/bg-images/50d.jpg");
 }
